scripts/nullness/annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8.txt
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:27: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:296: error: cannot find symbol
  @Initializer private void preserveOrderForRemoval(TreeNode<K, V> p) {
   ^
  symbol:   class Initializer
  location: class LinkedTreeMap<K,V>
  where K,V are type-variables:
    K extends Comparable<K> declared in class LinkedTreeMap
    V extends Object declared in class LinkedTreeMap
Note: ../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/ConstructorConstructor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/ElementConstructorManager.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
